tests/fixtures/valid/declarations/basic_indicator.pine
//@version=6
indicator("Basic", overlay = true)
plot(close)
