tests/fixtures/invalid/layout/missing_declaration_statement.pine
//@version=6
plot(close)
